# servo

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  ruff.toml
.agents/plugins/: marketplace.json
.claude-plugin/: install-contract.json  marketplace.json  plugin.json
.codex-plugin/: plugin.json
.github/: release-please-config.json
.github/workflows/: ci.yml  pr-title.yml  release.yml  verify.yml
agents/: architect.md  judge.md  runner.md
docs/: architecture.md  product-vision.md  refinement-todo.md
docs/bugs/: 001-agent-loop-masks-auth-error-as-plateau.md  002-agent-loop-no-permission-mode.md  003-spec-oracle-parser-zero-acs-on-preamble.md  004-goal-driver-masks-errors-and-drops-settings.md  005-evaluation-model-stale-overlay-path.md  README.md
docs/decisions/: ADR-0001-reuse-jig-test-detector.md  README.md  adr-0002-gate-caller-contract.md  adr-0003-fresh-subagent-roster.md  adr-0004-session-state-file-format.md  adr-0005-eval-oracle-component.md  adr-0006-meta-judge-output-contract.md  adr-0007-align-release-with-jig.md  adr-0008-loop-on-autonomy-primitives.md  adr-0009-design-fidelity-eval-recipe.md  adr-0010-triage-inbox-schema.md  adr-0011-host-native-phase-hints.md  adr-0012-heartbeat-whole-pass-cost-ceiling.md  adr-0013-servo-available-breadcrumb.md  adr-0014-evaluation-compiler.md  adr-0015-edd-suitability-gate.md  adr-0020-python-39-floor.md  (+12 more)
scripts/: build_host_packages.py  build_release_zip.py  ci_check.py  run_tests.py  scaffold_runtime.py  shellcheck.sh  test_build_host_packages.py  test_build_release_zip.py  test_ci_check.py  test_docs_install.py  test_scaffold_runtime.py  test_validate_manifests.py  test_verify_install.py  validate_manifests.py  verify_install.py  verify_install_surfaces.sh
templates/: crew-postmortem.md  meta-judge.sh.template  oracle.sh.template
(+340 files in other folders)
